--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "dependencies": {
     "@headlessui/react": "^1.7.2",
     "@remix-run/react": "1.15.0",
+    "@remix-run/server-runtime": "^1.16.1",
+    "@remix-run/vercel": "^1.16.1",
     "@shopify/cli": "3.45.0",
     "@shopify/cli-hydrogen": "^4.1.2",
     "@shopify/hydrogen": "^2023.4.1",
